# btc-portfolio-mgr

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/helsinki/: .env.example  DEPLOY.md  btc-portfolio.service  btc-portfolio.timer
docs/superpowers/plans/: 2026-05-20-phase-1-data-layer.md  2026-05-20-phase-2-features.md  2026-05-20-phase-3-return-model.md  2026-05-21-phase-4-vol-model.md  2026-05-21-phase-5-sizing.md
models/: btc_vol.json
scripts/: backfill_historical.py  build_features.py  flatten_position.py  live_ic_report.py  run_backtest.py  run_live.py  run_sizing.py  train_model.py  train_vol.py  verify_binance.py
tests/: conftest.py
tests/backtest/: test_metrics.py  test_replay.py  test_run_backtest.py  test_walk.py
tests/data/: test_backfill.py  test_binance_ws.py  test_coingecko.py  test_reader.py  test_storage.py
tests/features/: test_build_features.py  test_gaps.py  test_pipeline.py  test_regime.py  test_returns.py  test_volatility.py
tests/fixtures/: binance_bookticker_stream.jsonl  coingecko_range_response.json  synthetic_prices.py
tests/live/: test_account.py  test_binance_client.py  test_ic_monitor.py  test_inference_loop.py  test_live_logger.py  test_notifications.py  test_order_manager.py  test_risk.py
tests/model/: test_cv.py  test_git_info.py  test_inference.py  test_metrics.py  test_target.py  test_train.py  test_train_script.py
tests/sizing/: test_pipeline.py  test_run_sizing.py  test_sizer.py
tests/vol_model/: test_garch.py  test_inference.py  test_metrics.py  test_returns.py  test_target.py  test_train_vol.py
(+36 files in other folders)
