[project]
name = "btc-portfolio-mgr"
version = "0.1.0"
description = "Systematic BTC portfolio management with hourly rebalancing."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "websockets>=12.0",
    "pyarrow>=16.0",
    "python-dotenv>=1.0",
    "lightgbm>=4.5",
    "arch>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "pyright>=1.1.350",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btc_portfolio_mgr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
